--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.21.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.8.2",
     "nodemailer": "^6.9.16",
     "nodemon": "^3.1.7"
